clusters/nx/helm/kube-prometheus/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-strip
  namespace: monitor
spec:
  stripPrefix:
    prefixes:
      - "/grafana"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitor
  annotations:
  traefik.ingress.kubernetes.io/router.entrypoints: web
  # traefik.ingress.kubernetes.io/router.middlewares: default-grafana-strip@kubernetescrd

spec:
  ingressClassName: traefik
  rules:
    - host: kamrui
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-kube-stack-grafana
                port:
                  number: 80
